# deribit-crypto-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/api/: routers.py
app/core/: config.py
app/db/: database.py  models.py
app/logger_config/: setup_log.py
app/services/: deribit.py
app/tasks/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 4e1b386067c0_init_database.py
tests/: test_api.py
