[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Archie",email = "mainpost.ge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
