[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Archie",email = "mainpost.ge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "celery-types (>=0.26.0,<0.27.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
